--- a/css/queries.css
+++ b/css/queries.css
@@ -1099,7 +1099,7 @@
             rgba(255, 255, 255, 0.3),
             rgba(0, 0, 0, 0.7)
          ),
-         url(/img/background/gameplay-bg.jpg);
+         url(../img/background/gameplay-bg.jpg);
    }
 
    .gameplay-text {
@@ -1249,7 +1249,7 @@
             rgba(255, 255, 255, 0.15),
             rgba(0, 0, 0, 0.9)
          ),
-         url(/img/background/y7-mobile.jpg);
+         url(../img/background/y7-mobile.jpg);
    }
 
    .y7-p {
